[workspace]
resolver = "3"

members = [
    "sshoxy", "sshoxy-bin", "sshoxy-haas",
]

default-members = [
	"sshoxy",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0"
log = "0"
russh = { version = "0.60", features = ["flate2", "rsa", "async-trait", "ring"], default-features = false }
rand = { version = "0.10", features = ["thread_rng"] }
tokio = { version = "1", features = ["macros", "net", "io-util"] }

# Binary size optimizations
[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
