[package]
name = "sshoxy-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
async-trait = "0"
log = "0"
russh = "0.46.0"
russh-keys = "0.46.0"
sshoxy = { path="../sshoxy/" }
tokio = { version = "1", features = ["macros", "net", "io-util"] }

[features]
openssl = ["sshoxy/openssl"]

[[bin]]
name = "sshoxy"
path = "src/main.rs"
