[package]
name = "sshoxy-bin"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
async-trait = "0"
log = "0"
russh = { version = "0.52.1", features = ["async-trait"]}
sshoxy = { path="../sshoxy/" }
tokio = { version = "1", features = ["macros", "net", "io-util"] }

[features]

[[bin]]
name = "sshoxy"
path = "src/main.rs"
