[package]
name = "sshoxy-bin"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
rand = { workspace = true }
russh = { workspace = true }
sshoxy = { path="../sshoxy/" }
tokio = { workspace = true }

[features]

[[bin]]
name = "sshoxy"
path = "src/main.rs"
