[package]
name = "sshoxy-haas"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = { version = "0", optional = true}
async-trait = "0"
log = "0"
reqwest = { version = "0", features = ["json"] }
russh = { version = "0.52.1", features = ["async-trait"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sshoxy = { path="../sshoxy/" }
tokio = { version = "1", features = ["macros", "net", "io-util"] }


[features]
log = ["env_logger"]

[[bin]]
name = "haas-proxy"
path = "src/main.rs"
