[package]
name = "sshoxy-haas"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
env_logger = { version = "0", optional = true}
async-trait = "0"
log = "0"
reqwest = { version = "0.12", features = ["json"] }
russh = { version = "0.57.0", features = ["async-trait"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sshoxy = { path="../sshoxy/" }
tokio = { version = "1", features = ["macros", "net", "io-util", "process"] }


[features]
log = ["env_logger"]

[[bin]]
name = "haas-proxy"
path = "src/main.rs"
