[package]
name = "sshoxy-haas"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
env_logger = { version = "0", optional = true}
log = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
russh = { workspace = true }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sshoxy = { path="../sshoxy/" }
tokio = { workspace = true, features = ["process"] }


[features]
log = ["env_logger"]

[[bin]]
name = "haas-proxy"
path = "src/main.rs"
