[package]
name = "sshoxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
log = "0"
russh = "0.46.0"
russh-keys = "0.46.0"
tokio = { version = "1", features = ["macros", "net", "io-util"] }

[dev-dependencies]
env_logger = "0"

[features]
openssl = ["russh/openssl", "russh-keys/openssl"]
